[gd_scene load_steps=99 format=3 uid="uid://dej1mjtjgtaao"]

[ext_resource type="Script" path="res://Scripts/Player/LogMovements.gd" id="1_8lkio"]
[ext_resource type="Texture2D" uid="uid://c041f6oxnqu5j" path="res://Assets/Characters/salmon/Dive/Salmon-Dive1.png" id="2_67xvo"]
[ext_resource type="Script" path="res://Scripts/Player/CollisionHandler.gd" id="2_cobcv"]
[ext_resource type="Script" path="res://Scripts/Player/Animals/Salmon.gd" id="3_cks82"]
[ext_resource type="Texture2D" uid="uid://beima55vfu6g1" path="res://Assets/Characters/salmon/Dive/Salmon-Dive2.png" id="3_tijgr"]
[ext_resource type="Texture2D" uid="uid://65nys6kvvugp" path="res://Assets/Characters/salmon/Dive/Salmon-Dive3.png" id="4_w8o5o"]
[ext_resource type="Texture2D" uid="uid://de7c4sdmwifyv" path="res://Assets/Characters/salmon/Dive/Salmon-Dive4.png" id="5_pe40l"]
[ext_resource type="Script" path="res://Scripts/Player/Animals/Beaver.gd" id="5_supvc"]
[ext_resource type="Script" path="res://Scripts/Player/Animals/ThrowableStone.gd" id="6_8juii"]
[ext_resource type="Texture2D" uid="uid://cv4d24ki1rmqu" path="res://Assets/Characters/salmon/Dive/Salmon-Dive5.png" id="6_afssf"]
[ext_resource type="Texture2D" uid="uid://ruxac78hamll" path="res://Assets/Characters/salmon/Dive/Salmon-Dive6.png" id="7_2xvik"]
[ext_resource type="Texture2D" uid="uid://bv4lhaqlmsrjn" path="res://Assets/Characters/log/Log1.png" id="7_7qrfn"]
[ext_resource type="Script" path="res://Scripts/Player/Animals/Frog.gd" id="7_pt0qm"]
[ext_resource type="Texture2D" uid="uid://5qixmyu8yog2" path="res://Assets/Characters/salmon/Dive/Salmon-Dive7.png" id="8_6ugt4"]
[ext_resource type="Script" path="res://Scripts/Player/Animals/Crab.gd" id="8_gjrmx"]
[ext_resource type="Texture2D" uid="uid://cqlcm3vy8pidw" path="res://Assets/Characters/log/Log2.png" id="8_h1anq"]
[ext_resource type="Script" path="res://Scripts/Player/Animals/CrabCollision.gd" id="8_kqh2a"]
[ext_resource type="Texture2D" uid="uid://kg5yjat0xbh7" path="res://Assets/Characters/log/Log3.png" id="9_awe0w"]
[ext_resource type="Script" path="res://Scripts/Player/WaterParticles.gd" id="9_pk7q2"]
[ext_resource type="Script" path="res://Scripts/Player/Animals/Otter.gd" id="9_vpltj"]
[ext_resource type="Texture2D" uid="uid://481njn2w6q86" path="res://Assets/Characters/crab/Crab-16-Block.png" id="10_j1dfe"]
[ext_resource type="Texture2D" uid="uid://beeoqag4v0p23" path="res://Assets/Characters/crab/Crab-16.png" id="10_n0xnj"]
[ext_resource type="AudioStream" uid="uid://djnt26apoo0qc" path="res://Assets/Audio/SFX/takedamage.wav" id="10_yh0fn"]
[ext_resource type="Texture2D" uid="uid://dfkn7f2wsawhl" path="res://Assets/Characters/crab/Crab-16-Blocked.png" id="11_6rd0s"]
[ext_resource type="AudioStream" uid="uid://sqhqotk8ktbh" path="res://Assets/Audio/SFX/throw.wav" id="11_wwb3s"]
[ext_resource type="Texture2D" uid="uid://bvo7jugmoprf7" path="res://Assets/Characters/crab/Crab-16-Recover.png" id="12_5pyfs"]
[ext_resource type="Texture2D" uid="uid://ds256m6l1n6ty" path="res://Assets/grid.png" id="15_m36cb"]
[ext_resource type="Script" path="res://Scripts/Player/FreeLaneDetector.gd" id="15_u2cpq"]
[ext_resource type="Script" path="res://Scripts/EditorOnlyNode.gd" id="16_qhedj"]
[ext_resource type="Texture2D" uid="uid://bc14lf4ihduww" path="res://Assets/Characters/crab/Crab-idle1.png" id="17_vym65"]
[ext_resource type="Texture2D" uid="uid://bak08iibuvfc8" path="res://Assets/Characters/crab/Crab-idle2.png" id="18_o6otv"]
[ext_resource type="Texture2D" uid="uid://jpoqjxkxmn7c" path="res://Assets/Characters/salmon/Push-Left/Salmon-Push-Left1.png" id="19_78j6b"]
[ext_resource type="Texture2D" uid="uid://iwyy10u1j25m" path="res://Assets/Characters/crab/Crab-idle3.png" id="19_ej785"]
[ext_resource type="Texture2D" uid="uid://c0b3jk0ik0fx3" path="res://Assets/Characters/salmon/Push-Left/Salmon-Push-Left2.png" id="20_7kpa3"]
[ext_resource type="Texture2D" uid="uid://xm48ir3sxbso" path="res://Assets/Characters/crab/Crab-idle4.png" id="20_atfqn"]
[ext_resource type="Texture2D" uid="uid://c4orkvhpsm2c3" path="res://Assets/Characters/salmon/Push-Left/Salmon-Push-Left3.png" id="21_7grte"]
[ext_resource type="Script" path="res://Scripts/Player/Animals/AnimalTreeCollider.gd" id="21_r641f"]
[ext_resource type="Texture2D" uid="uid://bxtf36ljyoyin" path="res://Assets/Characters/salmon/Push-Left/Salmon-Push-Left4.png" id="22_db04y"]
[ext_resource type="Texture2D" uid="uid://33twwvafmv21" path="res://Assets/Characters/salmon/Surface/Salmon-Surface1.png" id="23_eo7xs"]
[ext_resource type="Texture2D" uid="uid://clgdbul7bf4vt" path="res://Assets/Characters/salmon/Push-Left/Salmon-Push-Left5.png" id="23_venmn"]
[ext_resource type="Texture2D" uid="uid://bfpvyvatpw46y" path="res://Assets/Characters/otter/Otter-idle1.png" id="24_4qxpl"]
[ext_resource type="Texture2D" uid="uid://bs28847blqyxg" path="res://Assets/Characters/salmon/Push-Left/Salmon-Push-Left6.png" id="24_kklf4"]
[ext_resource type="Texture2D" uid="uid://e2ag0ft7r22s" path="res://Assets/Characters/salmon/Surface/Salmon-Surface2.png" id="24_wtati"]
[ext_resource type="Texture2D" uid="uid://bnxbqhwccnmyk" path="res://Assets/Characters/otter/Otter-idle2.png" id="25_2wrn7"]
[ext_resource type="Texture2D" uid="uid://8clo1x62edsw" path="res://Assets/Characters/salmon/Push-Left/Salmon-Push-Left7.png" id="25_888it"]
[ext_resource type="Texture2D" uid="uid://chqthkup6lm04" path="res://Assets/Characters/salmon/Surface/Salmon-Surface3.png" id="25_pnqnc"]
[ext_resource type="Texture2D" uid="uid://cg6rluk2q41qq" path="res://Assets/Characters/salmon/Surface/Salmon-Surface4.png" id="26_4ap7i"]
[ext_resource type="Texture2D" uid="uid://daivxbebpsy" path="res://Assets/Characters/salmon/Push-Right/Salmon-Push-Right1.png" id="26_7nt5i"]
[ext_resource type="Texture2D" uid="uid://chfplw8p2e1pv" path="res://Assets/Characters/otter/Otter-idle3.png" id="26_v7l0p"]
[ext_resource type="Texture2D" uid="uid://cc07423n4n7bl" path="res://Assets/Characters/salmon/Surface/Salmon-Surface5.png" id="27_1i1y4"]
[ext_resource type="Texture2D" uid="uid://l25jylobyfct" path="res://Assets/Characters/salmon/Push-Right/Salmon-Push-Right2.png" id="27_edy5i"]
[ext_resource type="Texture2D" uid="uid://bqfsc5akf6smu" path="res://Assets/Characters/otter/Otter-idle4.png" id="27_vioc1"]
[ext_resource type="Texture2D" uid="uid://c5v1sttkinggl" path="res://Assets/Characters/otter/Otter-idleWrock1.png" id="28_1hhm4"]
[ext_resource type="Texture2D" uid="uid://ckguheakryj7y" path="res://Assets/Characters/salmon/Surface/Salmon-Surface6.png" id="28_dbdsd"]
[ext_resource type="Texture2D" uid="uid://ccobffxs1ml1x" path="res://Assets/Characters/salmon/Push-Right/Salmon-Push-Right3.png" id="28_w4ixd"]
[ext_resource type="Texture2D" uid="uid://l42jgycf1eqc" path="res://Assets/Characters/salmon/Push-Right/Salmon-Push-Right4.png" id="29_0b44f"]
[ext_resource type="Texture2D" uid="uid://bmsh7bohg53ux" path="res://Assets/Characters/otter/Otter-idleWrock2.png" id="29_q3v55"]
[ext_resource type="Texture2D" uid="uid://d00hqgk4sny58" path="res://Assets/Characters/otter/Otter-idleWrock3.png" id="30_rtexg"]
[ext_resource type="Texture2D" uid="uid://vbrp6k7rj5y3" path="res://Assets/Characters/salmon/Push-Right/Salmon-Push-Right5.png" id="30_vi6cq"]
[ext_resource type="Texture2D" uid="uid://dbixsu1ohh3cc" path="res://Assets/Characters/salmon/Push-Right/Salmon-Push-Right6.png" id="31_ip36h"]
[ext_resource type="Texture2D" uid="uid://bcjf08gd4sibf" path="res://Assets/Characters/otter/Otter-idleWrock4.png" id="31_roa1a"]
[ext_resource type="Texture2D" uid="uid://cjhywq7nvs6wr" path="res://Assets/Characters/salmon/Push-Right/Salmon-Push-Right7.png" id="32_nujse"]
[ext_resource type="Texture2D" uid="uid://bd2t8vc7yq0sx" path="res://Assets/Characters/frog/Frog-idle1.png" id="33_uja10"]
[ext_resource type="Texture2D" uid="uid://d3n0k1indcyby" path="res://Assets/Characters/frog/Frog-idle2.png" id="34_my5i5"]
[ext_resource type="Texture2D" uid="uid://ds8qg4kadht00" path="res://Assets/Characters/frog/Frog-idle3.png" id="35_b0lvv"]
[ext_resource type="Texture2D" uid="uid://5j6chl5sqgb2" path="res://Assets/Characters/frog/Frog-idle4.png" id="36_jfb8m"]
[ext_resource type="Texture2D" uid="uid://ctmkvtwka68qb" path="res://Assets/Characters/salmon/Swim/Salmon-Swim1.png" id="40_6r3cy"]
[ext_resource type="Texture2D" uid="uid://b0wtngg4wd86k" path="res://Assets/Characters/beaver/Justin-Beaver-idle1.png" id="40_f574g"]
[ext_resource type="Texture2D" uid="uid://byjwqf1rloskk" path="res://Assets/Characters/salmon/Swim/Salmon-Swim2.png" id="41_7gjmt"]
[ext_resource type="Texture2D" uid="uid://b5pm8g5plwt0g" path="res://Assets/Characters/beaver/Justin-Beaver-idle2.png" id="41_taxjl"]
[ext_resource type="Texture2D" uid="uid://ib5v8eg2hoch" path="res://Assets/Characters/salmon/Swim/Salmon-Swim3.png" id="42_0vki1"]
[ext_resource type="Texture2D" uid="uid://bkxgfu8oxro4j" path="res://Assets/Characters/beaver/Justin-Beaver-idle3.png" id="42_5rfwx"]
[ext_resource type="Texture2D" uid="uid://bkgln7347ulgl" path="res://Assets/Characters/salmon/Swim/Salmon-Swim4.png" id="43_r6s6k"]
[ext_resource type="Texture2D" uid="uid://cbonddx2xiqr0" path="res://Assets/Characters/beaver/Justin-Beaver-idle4.png" id="43_rfp8y"]
[ext_resource type="Texture2D" uid="uid://do3gmotrfoc15" path="res://Assets/Characters/crab/Crab-jump1.png" id="51_xkvco"]
[ext_resource type="Texture2D" uid="uid://d0eotuua3odi" path="res://Assets/Characters/crab/Crab-jump2.png" id="52_g36r5"]
[ext_resource type="Texture2D" uid="uid://y5pjy2g43ld" path="res://Assets/Characters/crab/Crab-jump3.png" id="53_e0574"]
[ext_resource type="Texture2D" uid="uid://57ntmlku7g2v" path="res://Assets/Characters/crab/Crab-jump4.png" id="54_eqeom"]
[ext_resource type="Texture2D" uid="uid://bsrmgvin7wjmm" path="res://Assets/Characters/otter/Otter-jump1.png" id="66_26epy"]
[ext_resource type="Texture2D" uid="uid://c7lmntjvtj2bd" path="res://Assets/Characters/otter/Otter-jump2.png" id="67_hiohc"]
[ext_resource type="Texture2D" uid="uid://do7163ox5ybkp" path="res://Assets/Characters/otter/Otter-jump3.png" id="68_2os8e"]
[ext_resource type="Texture2D" uid="uid://sdh5vgyxhc1i" path="res://Assets/Characters/otter/Otter-jump4.png" id="69_54t7c"]
[ext_resource type="Texture2D" uid="uid://co5i7cljhvh6w" path="res://Assets/Characters/otter/Otter-attack1.png" id="70_3ocon"]
[ext_resource type="Texture2D" uid="uid://b4ck4j4g7aiyu" path="res://Assets/Characters/otter/Otter-attack2.png" id="71_vq3j3"]
[ext_resource type="Texture2D" uid="uid://i8b3pvj33gsg" path="res://Assets/Characters/otter/Otter-attack3.png" id="72_ydhq1"]
[ext_resource type="Texture2D" uid="uid://daj84ytt68em3" path="res://Assets/Characters/otter/Otter-attack4.png" id="73_bb7nt"]
[ext_resource type="Texture2D" uid="uid://dn3tbesifvxuo" path="res://Assets/Characters/frog/frog-jump.png" id="75_228ub"]
[ext_resource type="Texture2D" uid="uid://dye6pi5r1jp2j" path="res://Assets/Characters/beaver/Justin-Beaver-Jump-Duck1.png" id="79_4e4nf"]
[ext_resource type="Texture2D" uid="uid://v3xb7mbtayyg" path="res://Assets/Characters/beaver/Justin-Beaver-Jump-Duck2.png" id="80_xssce"]
[ext_resource type="Texture2D" uid="uid://bg4puv6f4tjds" path="res://Assets/Characters/beaver/Justin-Beaver-Jump-Duck3.png" id="81_i8uei"]
[ext_resource type="Texture2D" uid="uid://cw73wk68jht3" path="res://Assets/Characters/beaver/Justin-Beaver-Jump-Duck4.png" id="82_him14"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8fae2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_67xvo")
}, {
"duration": 1.0,
"texture": ExtResource("3_tijgr")
}, {
"duration": 1.0,
"texture": ExtResource("4_w8o5o")
}, {
"duration": 1.0,
"texture": ExtResource("5_pe40l")
}, {
"duration": 1.0,
"texture": ExtResource("6_afssf")
}, {
"duration": 1.0,
"texture": ExtResource("7_2xvik")
}, {
"duration": 1.0,
"texture": ExtResource("8_6ugt4")
}],
"loop": false,
"name": &"dive",
"speed": 7.0
}, {
"frames": [{
"duration": 0.5,
"texture": ExtResource("19_78j6b")
}, {
"duration": 0.5,
"texture": ExtResource("20_7kpa3")
}, {
"duration": 1.0,
"texture": ExtResource("21_7grte")
}, {
"duration": 1.0,
"texture": ExtResource("22_db04y")
}, {
"duration": 1.0,
"texture": ExtResource("23_venmn")
}, {
"duration": 1.0,
"texture": ExtResource("24_kklf4")
}, {
"duration": 1.0,
"texture": ExtResource("25_888it")
}],
"loop": false,
"name": &"push-left",
"speed": 7.0
}, {
"frames": [{
"duration": 0.5,
"texture": ExtResource("26_7nt5i")
}, {
"duration": 0.5,
"texture": ExtResource("27_edy5i")
}, {
"duration": 1.0,
"texture": ExtResource("28_w4ixd")
}, {
"duration": 1.0,
"texture": ExtResource("29_0b44f")
}, {
"duration": 1.0,
"texture": ExtResource("30_vi6cq")
}, {
"duration": 1.0,
"texture": ExtResource("31_ip36h")
}, {
"duration": 1.0,
"texture": ExtResource("32_nujse")
}],
"loop": false,
"name": &"push-right",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_eo7xs")
}, {
"duration": 1.0,
"texture": ExtResource("24_wtati")
}, {
"duration": 1.0,
"texture": ExtResource("25_pnqnc")
}, {
"duration": 1.0,
"texture": ExtResource("26_4ap7i")
}, {
"duration": 1.0,
"texture": ExtResource("27_1i1y4")
}, {
"duration": 1.0,
"texture": ExtResource("28_dbdsd")
}],
"loop": false,
"name": &"surface",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("40_6r3cy")
}, {
"duration": 1.0,
"texture": ExtResource("41_7gjmt")
}, {
"duration": 1.0,
"texture": ExtResource("42_0vki1")
}, {
"duration": 1.0,
"texture": ExtResource("43_r6s6k")
}],
"loop": true,
"name": &"swim_idle",
"speed": 7.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_iirla"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_7qrfn")
}, {
"duration": 1.0,
"texture": ExtResource("8_h1anq")
}, {
"duration": 1.0,
"texture": ExtResource("9_awe0w")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}]

[sub_resource type="Curve" id="Curve_km1tf"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.6), -0.4, 0.0, 1, 0]
point_count = 2

[sub_resource type="SpriteFrames" id="SpriteFrames_bggev"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_n0xnj")
}, {
"duration": 2.0,
"texture": ExtResource("10_j1dfe")
}],
"loop": true,
"name": &"block",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_6rd0s")
}, {
"duration": 1.0,
"texture": ExtResource("12_5pyfs")
}],
"loop": true,
"name": &"destroy",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 3.0,
"texture": ExtResource("17_vym65")
}, {
"duration": 1.0,
"texture": ExtResource("18_o6otv")
}, {
"duration": 2.0,
"texture": ExtResource("19_ej785")
}, {
"duration": 1.0,
"texture": ExtResource("20_atfqn")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("51_xkvco")
}, {
"duration": 1.0,
"texture": ExtResource("52_g36r5")
}, {
"duration": 2.0,
"texture": ExtResource("53_e0574")
}, {
"duration": 1.0,
"texture": ExtResource("54_eqeom")
}],
"loop": true,
"name": &"jump",
"speed": 4.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_undwl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_4qxpl")
}, {
"duration": 1.0,
"texture": ExtResource("25_2wrn7")
}, {
"duration": 1.0,
"texture": ExtResource("26_v7l0p")
}, {
"duration": 1.0,
"texture": ExtResource("27_vioc1")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_1hhm4")
}, {
"duration": 1.0,
"texture": ExtResource("29_q3v55")
}, {
"duration": 1.0,
"texture": ExtResource("30_rtexg")
}, {
"duration": 1.0,
"texture": ExtResource("31_roa1a")
}],
"loop": true,
"name": &"idle_rocks",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("66_26epy")
}, {
"duration": 1.0,
"texture": ExtResource("67_hiohc")
}, {
"duration": 1.0,
"texture": ExtResource("68_2os8e")
}, {
"duration": 1.0,
"texture": ExtResource("69_54t7c")
}, {
"duration": 1.0,
"texture": ExtResource("66_26epy")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("70_3ocon")
}, {
"duration": 1.0,
"texture": ExtResource("71_vq3j3")
}, {
"duration": 1.0,
"texture": ExtResource("72_ydhq1")
}, {
"duration": 1.0,
"texture": ExtResource("73_bb7nt")
}],
"loop": true,
"name": &"throw",
"speed": 14.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_xte55"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("33_uja10")
}, {
"duration": 1.0,
"texture": ExtResource("34_my5i5")
}, {
"duration": 1.0,
"texture": ExtResource("35_b0lvv")
}, {
"duration": 1.0,
"texture": ExtResource("36_jfb8m")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("75_228ub")
}, {
"duration": 4.0,
"texture": ExtResource("36_jfb8m")
}, {
"duration": 1.0,
"texture": ExtResource("35_b0lvv")
}, {
"duration": 1.0,
"texture": ExtResource("75_228ub")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_j8obe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("40_f574g")
}, {
"duration": 1.0,
"texture": ExtResource("79_4e4nf")
}, {
"duration": 1.0,
"texture": ExtResource("80_xssce")
}, {
"duration": 1.0,
"texture": ExtResource("81_i8uei")
}, {
"duration": 1.0,
"texture": ExtResource("82_him14")
}, {
"duration": 1.0,
"texture": ExtResource("42_5rfwx")
}],
"loop": true,
"name": &"dive",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("40_f574g")
}, {
"duration": 1.0,
"texture": ExtResource("41_taxjl")
}, {
"duration": 1.0,
"texture": ExtResource("42_5rfwx")
}, {
"duration": 1.0,
"texture": ExtResource("43_rfp8y")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}]

[node name="Player" type="Node2D"]
script = ExtResource("1_8lkio")
speed = 5
base_speed = 1300
multiplier = 1.0

[node name="Salmon" type="AnimatedSprite2D" parent="."]
z_index = -40
position = Vector2(-309, 213)
sprite_frames = SubResource("SpriteFrames_8fae2")
animation = &"push-left"
autoplay = "swim_idle"
script = ExtResource("3_cks82")

[node name="Log" type="Area2D" parent="."]
texture_filter = 1
collision_layer = 17
script = ExtResource("2_cobcv")

[node name="FreeLaneDetector" type="Node2D" parent="Log"]

[node name="Center" type="Area2D" parent="Log/FreeLaneDetector"]
monitorable = false
script = ExtResource("15_u2cpq")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Log/FreeLaneDetector/Center"]
polygon = PackedVector2Array(-166, 45, -90, 80, 321, -125, 240, -161)

[node name="Left1" type="Area2D" parent="Log/FreeLaneDetector"]
position = Vector2(-190, -95)
monitorable = false
script = ExtResource("15_u2cpq")
lane_offset = -1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Log/FreeLaneDetector/Left1"]
polygon = PackedVector2Array(-166, 45, -90, 80, 368, -147, 290, -186)

[node name="Left2" type="Area2D" parent="Log/FreeLaneDetector"]
position = Vector2(-380, -190)
monitorable = false
script = ExtResource("15_u2cpq")
lane_offset = -2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Log/FreeLaneDetector/Left2"]
polygon = PackedVector2Array(-123, 20, -35, 55, 419, -174, 338, -210)

[node name="Left3" type="Area2D" parent="Log/FreeLaneDetector"]
position = Vector2(-570, -285)
monitorable = false
script = ExtResource("15_u2cpq")
lane_offset = -3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Log/FreeLaneDetector/Left3"]
polygon = PackedVector2Array(-93, 8, -13, 43, 419, -174, 338, -210)

[node name="Right1" type="Area2D" parent="Log/FreeLaneDetector"]
position = Vector2(190, 95)
monitorable = false
script = ExtResource("15_u2cpq")
lane_offset = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Log/FreeLaneDetector/Right1"]
polygon = PackedVector2Array(-146, 36, -70, 71, 353, -142, 266, -181)

[node name="Right2" type="Area2D" parent="Log/FreeLaneDetector"]
position = Vector2(380, 190)
monitorable = false
script = ExtResource("15_u2cpq")
lane_offset = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Log/FreeLaneDetector/Right2"]
polygon = PackedVector2Array(-117, 17, -25, 52, 419, -174, 338, -210)

[node name="Right3" type="Area2D" parent="Log/FreeLaneDetector"]
position = Vector2(570, 285)
monitorable = false
script = ExtResource("15_u2cpq")
lane_offset = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Log/FreeLaneDetector/Right3"]
polygon = PackedVector2Array(-66, -5, 10, 33, 419, -174, 338, -210)

[node name="LogSprite" type="AnimatedSprite2D" parent="Log"]
position = Vector2(-52, 42)
sprite_frames = SubResource("SpriteFrames_iirla")
animation = &"idle"
frame = 1
frame_progress = 0.276349

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Log"]
polygon = PackedVector2Array(-188, 108, -227, 118, -223, 81, 55, -60, 116, -42)

[node name="WaterParticles" type="CPUParticles2D" parent="Log"]
z_index = -1
position = Vector2(-96, 55)
amount = 100
preprocess = 12.12
randomness = 0.46
lifetime_randomness = 0.65
emission_shape = 1
emission_sphere_radius = 26.86
direction = Vector2(-1.2, 1)
gravity = Vector2(0, 20)
initial_velocity_max = 131.32
linear_accel_min = -100.0
linear_accel_max = 80.81
scale_amount_min = 8.0
scale_amount_max = 8.0
scale_amount_curve = SubResource("Curve_km1tf")
color = Color(0.71875, 0.800781, 0.816406, 1)
script = ExtResource("9_pk7q2")

[node name="DamageSFX" type="AudioStreamPlayer" parent="Log"]
stream = ExtResource("10_yh0fn")
bus = &"SFX"

[node name="ThrowableStone" type="Node2D" parent="."]
script = ExtResource("6_8juii")

[node name="StoneCollider" type="Area2D" parent="ThrowableStone"]
monitorable = false

[node name="StoneCollisionSFX" type="AudioStreamPlayer" parent="ThrowableStone/StoneCollider"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ThrowableStone/StoneCollider"]
polygon = PackedVector2Array(-11, -18, 35, 3, 1, 21, -44, -1)

[node name="StoneThrowSFX" type="AudioStreamPlayer" parent="ThrowableStone"]
stream = ExtResource("11_wwb3s")
bus = &"SFX"

[node name="Crab" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(70, -90)
sprite_frames = SubResource("SpriteFrames_bggev")
animation = &"idle"
autoplay = "idle"
script = ExtResource("8_gjrmx")

[node name="CrabCollider" type="Area2D" parent="Crab"]
position = Vector2(-152, 64)
scale = Vector2(0.703125, 0.703125)
collision_layer = 2
collision_mask = 2
monitorable = false
script = ExtResource("21_r641f")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Crab/CrabCollider"]
position = Vector2(189.156, -68.2667)
polygon = PackedVector2Array(-49.7778, 45.5111, 4.26666, 62.5778, 46.9333, 44.0889, -5.68889, 25.6)

[node name="Area2D" type="Area2D" parent="Crab"]
position = Vector2(-70, 90)
script = ExtResource("8_kqh2a")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Crab/Area2D"]
position = Vector2(114, -33)
polygon = PackedVector2Array(18, -10, -45, -36, -7, -48, 25, -35)
disabled = true

[node name="WaterParticles" type="CPUParticles2D" parent="Crab"]
position = Vector2(-8, 38)
scale = Vector2(0.703125, 0.703125)
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.25
lifetime_randomness = 0.3
emission_shape = 3
emission_rect_extents = Vector2(50, 50)
direction = Vector2(0.4, -1)
spread = 35.39
gravity = Vector2(0, 500)
initial_velocity_max = 743.62
scale_amount_min = 8.0
scale_amount_max = 8.0
scale_amount_curve = SubResource("Curve_km1tf")
color = Color(0.71875, 0.800781, 0.816406, 1)

[node name="Otter" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-14, -65)
sprite_frames = SubResource("SpriteFrames_undwl")
animation = &"throw"
autoplay = "idle"
script = ExtResource("9_vpltj")

[node name="WaterParticles" type="CPUParticles2D" parent="Otter"]
position = Vector2(-8, 38)
scale = Vector2(0.703125, 0.703125)
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.25
lifetime_randomness = 0.3
emission_shape = 3
emission_rect_extents = Vector2(50, 50)
direction = Vector2(0.4, -1)
spread = 35.39
gravity = Vector2(0, 500)
initial_velocity_max = 743.62
scale_amount_min = 8.0
scale_amount_max = 8.0
scale_amount_curve = SubResource("Curve_km1tf")
color = Color(0.71875, 0.800781, 0.816406, 1)

[node name="OtterCollider" type="Area2D" parent="Otter"]
position = Vector2(-68, 39)
scale = Vector2(0.703125, 0.703125)
collision_layer = 2
collision_mask = 2
monitorable = false
script = ExtResource("21_r641f")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Otter/OtterCollider"]
position = Vector2(105.244, -32.7111)
polygon = PackedVector2Array(-49.7778, 45.5111, 4.26666, 62.5778, 46.9333, 44.0889, -5.68889, 25.6)

[node name="Frog" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-82, -26)
scale = Vector2(0.703125, 0.703125)
sprite_frames = SubResource("SpriteFrames_xte55")
animation = &"empty"
autoplay = "idle"
script = ExtResource("7_pt0qm")

[node name="FrogCollider" type="Area2D" parent="Frog"]
position = Vector2(1, 1)
collision_layer = 2
collision_mask = 2
monitorable = false
script = ExtResource("21_r641f")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Frog/FrogCollider"]
polygon = PackedVector2Array(-49.7778, 45.5111, 4.26666, 62.5778, 46.9333, 44.0889, -5.68889, 25.6)

[node name="WaterParticles" type="CPUParticles2D" parent="Frog"]
position = Vector2(-8, 38)
scale = Vector2(0.703125, 0.703125)
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.25
lifetime_randomness = 0.3
emission_shape = 3
emission_rect_extents = Vector2(50, 50)
direction = Vector2(0.4, -1)
spread = 35.39
gravity = Vector2(0, 500)
initial_velocity_max = 743.62
scale_amount_min = 8.0
scale_amount_max = 8.0
scale_amount_curve = SubResource("Curve_km1tf")
color = Color(0.71875, 0.800781, 0.816406, 1)

[node name="GridHelper(hide)" type="Sprite2D" parent="."]
visible = false
z_index = -10
position = Vector2(672, -432.5)
texture = ExtResource("15_m36cb")
script = ExtResource("16_qhedj")

[node name="Beaver" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-177, 72)
sprite_frames = SubResource("SpriteFrames_j8obe")
animation = &"dive"
autoplay = "idle"
frame_progress = 0.384468
script = ExtResource("5_supvc")

[connection signal="animation_finished" from="Salmon" to="Salmon" method="_on_animation_finished"]
[connection signal="animation_looped" from="Crab" to="Crab" method="_on_animation_looped"]
[connection signal="animation_looped" from="Otter" to="Otter" method="_on_animation_looped"]
[connection signal="animation_looped" from="Frog" to="Frog" method="_on_animation_looped"]
[connection signal="animation_looped" from="Beaver" to="Beaver" method="_on_animation_looped"]
